--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,31 +1,6 @@
 version: '2'
 
 services:
-  front-end:
-    image: weaveworksdemos/front-end:0.3.12
-    hostname: front-end
-    restart: always
-    cap_drop:
-      - all
-    read_only: true
-  edge-router:
-    image: weaveworksdemos/edge-router:0.1.1
-    ports:
-      - '80:80'
-      - '8080:8080'
-    cap_drop:
-      - all
-    cap_add:
-      - NET_BIND_SERVICE
-      - CHOWN
-      - SETGID
-      - SETUID
-      - DAC_OVERRIDE
-    read_only: true
-    tmpfs:
-      - /var/run:rw,noexec,nosuid
-    hostname: edge-router
-    restart: always
   catalogue:
     image: weaveworksdemos/catalogue:0.3.5
     hostname: catalogue
@@ -44,7 +19,7 @@ services:
       - MYSQL_ALLOW_EMPTY_PASSWORD=true
       - MYSQL_DATABASE=socksdb
   carts:
-    image: weaveworksdemos/carts:0.4.8
+    image: tw_workshop/carts:latest
     hostname: carts
     restart: always
     cap_drop:
@@ -56,6 +31,8 @@ services:
       - /tmp:rw,noexec,nosuid
     environment:
       - JAVA_OPTS=-Xms64m -Xmx128m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
+    ports:
+          - "8083:80"
   carts-db:
     image: mongo:3.4
     hostname: carts-db
@@ -70,7 +47,7 @@ services:
     tmpfs:
       - /tmp:rw,noexec,nosuid
   orders:
-    image: weaveworksdemos/orders:0.4.7
+    image: tw_workshop/orders:latest
     hostname: orders
     restart: always
     cap_drop:
@@ -82,6 +59,8 @@ services:
       - /tmp:rw,noexec,nosuid
     environment:
       - JAVA_OPTS=-Xms64m -Xmx128m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
+    ports:
+      - "8082:80"
   orders-db:
     image: mongo:3.4
     hostname: orders-db
@@ -95,53 +74,6 @@ services:
     read_only: true
     tmpfs:
       - /tmp:rw,noexec,nosuid
-  shipping:
-    image: weaveworksdemos/shipping:0.4.8
-    hostname: shipping
-    restart: always
-    cap_drop:
-      - all
-    cap_add:
-      - NET_BIND_SERVICE
-    read_only: true
-    tmpfs:
-      - /tmp:rw,noexec,nosuid
-    environment:
-      - JAVA_OPTS=-Xms64m -Xmx128m -XX:+UseG1GC -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
-  queue-master:
-    image: weaveworksdemos/queue-master:0.3.1
-    hostname: queue-master
-    volumes:
-      - /var/run/docker.sock:/var/run/docker.sock
-    restart: always
-    cap_drop:
-      - all
-    cap_add:
-      - NET_BIND_SERVICE
-    read_only: true
-    tmpfs:
-      - /tmp:rw,noexec,nosuid
-  rabbitmq:
-    image: rabbitmq:3.6.8
-    hostname: rabbitmq
-    restart: always
-    cap_drop:
-      - all
-    cap_add:
-      - CHOWN
-      - SETGID
-      - SETUID
-      - DAC_OVERRIDE
-    read_only: true
-  payment:
-    image: weaveworksdemos/payment:0.4.3
-    hostname: payment
-    restart: always
-    cap_drop:
-      - all
-    cap_add:
-      - NET_BIND_SERVICE
-    read_only: true
   user:
     image: weaveworksdemos/user:0.4.4
     hostname: user
@@ -166,10 +98,3 @@ services:
     read_only: true
     tmpfs:
       - /tmp:rw,noexec,nosuid
-  user-sim:
-    image: weaveworksdemos/load-test:0.1.1
-    cap_drop:
-      - all
-    read_only: true
-    hostname: user-simulator
-    command: "-d 60 -r 200 -c 2 -h edge-router"
